# VulkanWrapper

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  IMPROVEMENTS.md  Improving.md  README.md  RENDERING_ENGINE_SKILL.md  main.cpp  vcpkg.json
3DRenderer/: CMakeLists.txt
3DRenderer/include/: CMakeLists.txt
3DRenderer/include/3DRenderer/: 3rd_party.h
3DRenderer/include/3DRenderer/Core/: fwd.h
3DRenderer/src/: CMakeLists.txt
VulkanWrapper/: CMakeLists.txt
VulkanWrapper/Shaders/: fullscreen.vert  indirect_light.rchit  indirect_light.rgen  indirect_light.rmiss  indirect_light_colored.rchit  indirect_light_emissive_textured.rchit  indirect_light_textured.rchit  sky.frag  sky_light.rchit  sky_light.rgen  sky_light.rmiss  sun_light.frag  tonemap.frag
VulkanWrapper/Shaders/GBuffer/: gbuffer_base.glsl
VulkanWrapper/Shaders/include/: atmosphere_params.glsl  atmosphere_scattering.glsl  geometry_access.glsl  indirect_light_base.glsl  indirect_light_hit_common.glsl  random.glsl  sky_radiance.glsl  sun_lighting_computation.glsl
VulkanWrapper/Shaders/include/Material/: brdf_colored.glsl  brdf_emissive_textured.glsl  brdf_textured.glsl
VulkanWrapper/Shaders/post-process/: ambient_occlusion.frag
VulkanWrapper/include/: CMakeLists.txt
VulkanWrapper/include/VulkanWrapper/: 3rd_party.h  CMakeLists.txt  assimp3rd.cppm  fwd.h  glm3rd.cppm  macros.h  sdl3rd.cppm  shaderc3rd.cppm  std3rd.cppm  vma3rd.cppm  vulkan3rd.cppm  vw_vulkan.h
VulkanWrapper/include/VulkanWrapper/AccelerationStructure/: AccelerationStructure.h  CMakeLists.txt
VulkanWrapper/include/VulkanWrapper/Command/: CMakeLists.txt  CommandBuffer.h  CommandPool.h  ResourceTracker.h
VulkanWrapper/include/VulkanWrapper/Core/: fwd.h
VulkanWrapper/modules/: vw-command.cppm  vw-core.cppm  vw-descriptors.cppm  vw-image.cppm  vw-memory.cppm  vw-model.cppm  vw-pipeline.cppm  vw-random.cppm  vw-raytracing.cppm  vw-renderpass.cppm  vw-shader.cppm  vw-synchronization.cppm  vw-utils.cppm  vw-vulkan.cppm  vw-window.cppm  vw.cppm
VulkanWrapper/src/: CMakeLists.txt
VulkanWrapper/src/VulkanWrapper/: CMakeLists.txt  vw.cppm
VulkanWrapper/tests/: CMakeLists.txt
VulkanWrapper/tests/Command/: CommandPoolTests.cpp
VulkanWrapper/tests/Descriptors/: DescriptorTests.cpp
VulkanWrapper/tests/Image/: ImageTests.cpp  ImageViewTests.cpp  SamplerTests.cpp
VulkanWrapper/tests/Material/: BindlessMaterialManagerTests.cpp  BindlessTextureManagerTests.cpp  ColoredMaterialHandlerTests.cpp  EmissiveTexturedMaterialHandlerTests.cpp  MaterialTypeTagTests.cpp  TexturedMaterialHandlerTests.cpp
VulkanWrapper/tests/Memory/: AllocatorTests.cpp  BufferTests.cpp  IntervalSetTests.cpp  IntervalTests.cpp  ResourceTrackerTests.cpp  StagingBufferManagerTests.cpp  TransferTests.cpp  UniformBufferAllocatorTests.cpp
VulkanWrapper/tests/Model/: MeshManagerTests.cpp  PrimitiveTests.cpp
VulkanWrapper/tests/Pipeline/: PipelineTests.cpp
VulkanWrapper/tests/Random/: RandomSamplingTests.cpp
VulkanWrapper/tests/RayTracing/: GeometryAccessTests.cpp  RayTracedSceneTests.cpp
VulkanWrapper/tests/RenderPass/: AmbientOcclusionPassTests.cpp  DirectLightPassTests.cpp  IndirectLightPassSunBounceTests.cpp  IndirectLightPassTests.cpp  RenderPipelineTests.cpp  ScreenSpacePassTests.cpp  SkyLightPassTests.cpp  SkyPassTests.cpp  SubpassTests.cpp  SunLightPassTests.cpp  ToneMappingPassTests.cpp  ZPassTests.cpp
VulkanWrapper/tests/Shader/: ShaderCompilerTests.cpp
VulkanWrapper/tests/Synchronization/: SynchronizationTests.cpp
VulkanWrapper/tests/Vulkan/: InstanceTests.cpp
VulkanWrapper/tests/utils/: ErrorTests.cpp  create_gpu.cpp  create_gpu.hpp  test.cppm
docs/tutorials/: CMakeLists.txt
docs/tutorials/01-triangle/: main.cpp
docs/tutorials/02-texture/: main.cpp
docs/tutorials/TutorialFramework/: TutorialApp.cpp  TutorialApp.h
examples/Advanced/: Advanced.cppm  AmbientOcclusionPass.cppm  AmbientOcclusionPass.h  CMakeLists.txt  ColorPass.h  DeferredRenderingManager.cpp  DeferredRenderingManager.cppm  DeferredRenderingManager.h  DirectLightPass.cppm  DirectLightPass.h  RayTracing.cpp  RayTracing.h  RenderPassInformation.cppm  RenderPassInformation.h  SceneSetup.cppm  SceneSetup.h  SkyParameters.h  SkyPass.h  SunLightPass.h  SunLightingPass.h  TonemapPass.h  ZPass.cppm  ZPass.h  main.cpp
examples/Advanced/Shaders/: quad.vert
examples/Common/: CMakeLists.txt  ExampleRunner.cpp  ExampleRunner.h  SceneSetup.h
vw_c/: CMakeLists.txt
vw_c/include/: CMakeLists.txt  SDL_Initializer.h  Window.h  array.h  bindings.h
vw_c/include/Command/: CommandBuffer.h  CommandPool.h
vw_c/include/Image/: Framebuffer.h  Image.h  ImageView.h
vw_c/include/Pipeline/: Pipeline.h  PipelineLayout.h  ShaderModule.h
vw_c/include/RenderPass/: Attachment.h  RenderPass.h  Subpass.h
vw_c/include/Synchronization/: Fence.h  Semaphore.h
vw_c/include/Vulkan/: Device.h  Instance.h  PresentQueue.h  Queue.h  Swapchain.h  enums.h
vw_c/include/Window/: SDL_Initializer.h  Window.h
vw_c/include/utils/: array.h  utils.h
vw_c/src/: CMakeLists.txt  SDL_Initializer.cpp  Window.cpp  array.cpp
vw_c/src/Command/: CommandBuffer.cpp  CommandPool.cpp
vw_c/src/Image/: Framebuffer.cpp  Image.cpp  ImageView.cpp
vw_c/src/Pipeline/: Pipeline.cpp  PipelineLayout.cpp  ShaderModule.cpp
vw_c/src/RenderPass/: Attachment.cpp  RenderPass.cpp  Subpass.cpp
vw_c/src/Synchronization/: Fence.cpp  Semaphore.cpp
vw_c/src/Vulkan/: Device.cpp  Instance.cpp  PresentQueue.cpp  Queue.cpp  Swapchain.cpp
vw_c/src/Window/: SDL_Initializer.cpp  Window.cpp
vw_c/src/utils/: array.cpp
vw_py/: CMakeLists.txt  bindings_vw_py.py  main.py  use.py  vw.i
vw_py/Command/: CommandBuffer.py  CommandPool.py
vw_py/Image/: Framebuffer.py  Image.py  ImageView.py
vw_py/Pipeline/: Pipeline.py  PipelineLayout.py  ShaderModule.py
vw_py/RenderPass/: Attachment.py  RenderPass.py  Subpass.py
vw_py/Synchronization/: Fence.py  Semaphore.py
vw_py/Vulkan/: Device.py  DeviceFinder.py  GraphicsQueue.py  Instance.py  PresentQueue.py  Surface.py  Swapchain.py
vw_py/Window/: SDL_Initializer.py  Window.py
(+640 files in other folders)
