add_subdirectory(Utils)
if(TARGET SDL3::SDL3)
    add_subdirectory(Window)
endif()
add_subdirectory(Vulkan)
add_subdirectory(Image)
add_subdirectory(Pipeline)
add_subdirectory(RenderPass)
add_subdirectory(Command)
add_subdirectory(Synchronization)
add_subdirectory(Memory)
add_subdirectory(Descriptors)
if(TARGET assimp::assimp)
    add_subdirectory(Model)
    add_subdirectory(RayTracing)
endif()
